<resources>
    <string name="app_name">ResepKu</string>
    <string name="resepName">Resep Title</string>
    <string name="resepDesc">Resep description</string>
    <string name="resepSource">Sumber</string>
    <string name="resepIng">Bahan-Bahan</string>
    <string name="resepDo">Langkah</string>
    <string name="about">About</string>
    <string name="bahan_bahan">Bahan-bahan</string>
    <string name="cara_membuat">Cara Membuat</string>
    <string name="nama_about">Steven Famy</string>
    <string name="email_about">steve.mailme@gmail.com</string>
    <string name="github_about">https://github.com/groovecain</string>
</resources>
