<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".resepDetail">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:id="@+id/resepPhotoDet"
                tools:src="@android:color/holo_purple"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mainHorizontalMargin"
                android:layout_marginVertical="@dimen/mainVerticalMargin"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:id="@+id/resepSourceDet"
                    tools:text="@string/resepSource"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/resepDescDet"
                    tools:text="@string/resepDesc"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/bahan_bahan"
                    android:id="@+id/ketBahan"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/resepIngDet"
                    tools:text="@string/resepIng"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/cara_membuat"
                    android:id="@+id/ketMembuat"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:justificationMode="inter_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/resepDoDet"
                    tools:text="@string/resepDo"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>