<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:padding="@dimen/mainVerticalMargin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_marginBottom="20dp"
                android:layout_height="110dp"
                android:id="@+id/photosFrame"
                app:cardCornerRadius="6dp"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/resepPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@android:color/holo_purple" />
            </androidx.cardview.widget.CardView>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/namaAbout"
                android:text="@string/nama_about"
                android:layout_gravity="center"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:id="@+id/emailAbout"
                android:text="@string/email_about"
                android:layout_gravity="center"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:id="@+id/githubAbout"
                android:text="@string/github_about"
                android:layout_gravity="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
</RelativeLayout>